--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -16,15 +16,15 @@ $colorPurple: #854AA0;
 $colorCyan: #68C7ED;
 $colorBlue: #6272a4;
 $colorYellow: #E7DC64;
-$colorGreen: #5FE1C2;
+$colorGreen: #71AA62;
 $colorOrange: #ffb86c;
 $colorRed: #F2608A;
 
 // Variables in use
-$colorOne: $colorCyan;
+$colorOne: $colorGreen;
 $colorTwo: $colorGreen;
-$colorThree: $colorYellow;
-$colorFour: $colorPurple;
+$colorThree: $colorBlue;
+$colorFour: $colorGreen;
 $colorFive: $colorBlue;
 $colorSix: $colorRed;
 $colorSeven: $colorOrange;
@@ -205,11 +205,11 @@ $iconLinecap: square;
 
 // Front matter dependent
 body {
-  background-image: url('{{ site.github.url }}/assets/bg-layer-1.png');
+  background-image: url('{{ site.github.url }}/assets/bg-layer-1.svg');
   background-repeat: repeat-x;
 }
 .body-wrapper {
-  background-image: url('{{ site.github.url }}/assets/bg-layer-2.png');
+  background-image: url('{{ site.github.url }}/assets/bg-layer-2.svg');
   background-repeat: repeat-x;
   overflow: auto;
 }
